--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>iotdb-session</artifactId>
             <version>0.11.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>tsfile</artifactId>
+            <version>0.11.2</version>
+        </dependency>
     </dependencies>
 
 
